--- a/css/styles.css
+++ b/css/styles.css
@@ -143,14 +143,14 @@ p {
     background-color: #2E2F42;
     color: white;
     font-weight: 500;
-    background-image:linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url("/images/people-office\ 1.jpg");
+    background-image:linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), 
+    url("../images/people-office\ 1.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
 
-.sectiontwo-container {
-    
+.sectionone-container {
     max-width: 1440px;
 
 }
