--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ p {
     background-color: #2E2F42;
     color: white;
     font-weight: 500;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office\ 1.jpg");
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url("../images/people-office.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
