--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,9 @@ p {
 .header {
   border-bottom: 1px solid #e7e9fc;
   background-color: #ffffff;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
+  0px 1px 1px rgba(46, 47, 66, 0.16), 
+  0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -87,6 +90,7 @@ p {
   text-transform: uppercase;
   color: #4d5ae5;
   margin-right: 76px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hedearspan {
@@ -105,6 +109,7 @@ p {
   list-style: none;
   margin: 0;
   padding: 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link {
@@ -116,7 +121,28 @@ p {
   display: block;
   padding: 24px 0;;
 }
+.header-li{
+    position: relative;
+}
+.active-link::after{
+    content: "";
+    display: inline-block;
+    height: 4px;
+    width: 44px;
+    border-radius: 2px;
+    background-color: #404bbf;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+}
+.nav-list:first-child {
+    color: #404bbf;
+}
 
+.header-li:hover,
+.header-li:focus {
+  color: #404bbf;
+}
 .address {
   font-style: normal;
 }
@@ -148,9 +174,8 @@ p {
     background-position: center;
     background-size: cover;
     max-width: 1440px;
-}
-
-.sectionone-container {
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .title {
