--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,24 @@ p {
     font-size: 20px;
     color: #2e2f42;
 }
+.sectiontwo-icon-svg{
+    display: flex;
+    background-color: #f4f4fd;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px; 
+    height: 112px;
+    position: relative; 
+}
+
+.sectiontwo-logo-item {
+    display: block;
+    position: absolute;
+    left: 100px;
+    
+}
 
 /* section 3 */
 .sectionthree {
