--- a/css/styles.css
+++ b/css/styles.css
@@ -102,15 +102,7 @@ p {
     align-items: center;
 }
 
-.nav-list,
-.contact-list {
-  display: flex;
-  gap: 40px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 
 .link {
   font-family: "Roboto", sans-serif;
@@ -121,20 +113,32 @@ p {
   display: block;
   padding: 24px 0;;
 }
-.header-li{
+.link { 
     position: relative;
 }
 .active-link::after{
     content: "";
     display: inline-block;
     height: 4px;
-    width: 44px;
+    width: 100%;
     border-radius: 2px;
     background-color: #404bbf;
+    color: #404bbf;
     position: absolute;
     left: 0;
     bottom: -1px;
 }
+
+.nav-list,
+.contact-list {
+  display: flex;
+  gap: 40px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .nav-list:first-child {
     color: #404bbf;
 }
