--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,6 @@ p {
   text-transform: uppercase;
   color: #4d5ae5;
   margin-right: 76px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hedearspan {
@@ -111,11 +110,11 @@ p {
   color: #2e2f42;
   text-decoration: none;
   display: block;
-  padding: 24px 0;;
+  padding: 24px 0;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link { 
-    position: relative;
-}
+
 .active-link::after{
     content: "";
     display: inline-block;
@@ -136,10 +135,9 @@ p {
   list-style: none;
   margin: 0;
   padding: 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-list:first-child {
+.header-li:first-child .link{
     color: #404bbf;
 }
 
