--- a/css/styles.css
+++ b/css/styles.css
@@ -307,7 +307,7 @@ p {
     background-color: #F4F4FD;
 }
 
-.sectionthree li {
+.sectionthree .list-ulr {
     background-color: #FFFFFF;
 }
 
@@ -315,6 +315,36 @@ p {
 .threep {
     font-size: 16px;
     text-align: center;
+    margin-bottom: 8px;
+}
+
+.sectionthree-items {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.sectionthree-icon {
+    width: 40px;
+    height: 40px;
+}
+.sectionthree-icon-svg {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.sectionthree-icon-svg:hover,
+.sectionthree-icon-svg:focus {
+    background-color: #404BBF;
+}
+
+.sectionthree-logo-item {
+    fill: #F4F4FD;
 }
 
 /* section 4 */
