--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,9 @@ p {
 .list-ulr{
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px; 
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+    0px 1px 1px rgba(46, 47, 66, 0.16), 
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .team-ulr {
     padding: 32px 0;
@@ -327,6 +330,7 @@ p {
 .sectionthree-icon {
     width: 40px;
     height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .sectionthree-icon-svg {
     width: 100%;
