--- a/css/styles.css
+++ b/css/styles.css
@@ -370,6 +370,7 @@ p {
 .list-portfolio {
     flex-basis: calc((100% - 48px) / 3);
     cursor: pointer;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-cont{
     padding: 32px 16px;
@@ -412,16 +413,18 @@ p {
   height: 100%;
   padding: 40px 32px;
   background-color: #4d5ae5;
-  color: var(--overlay-text-color, #f4f4fd);
+  color: #f4f4fd;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-img-container:hover .portfolio-overlay {
+.list-portfolio:hover .portfolio-overlay {
   transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
+  0px 1px 1px rgba(46, 47, 66, 0.16), 
+  0px 2px 1px rgba(46, 47, 66, 0.08);;
 }
 
 /* footer */
