--- a/css/styles.css
+++ b/css/styles.css
@@ -367,11 +367,7 @@ p {
     column-gap: 24px
 }
 
-.list-portfolio {
-    flex-basis: calc((100% - 48px) / 3);
-    cursor: pointer;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 .portfolio-cont{
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
@@ -404,6 +400,11 @@ p {
   width: 100%;
   height: auto;
 }
+.list-portfolio {
+    flex-basis: calc((100% - 48px) / 3);
+    cursor: pointer;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .portfolio-overlay {
   position: absolute;
@@ -418,14 +419,18 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-portfolio:hover .portfolio-overlay {
   transform: translateY(0%);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 
-  0px 1px 1px rgba(46, 47, 66, 0.16), 
-  0px 2px 1px rgba(46, 47, 66, 0.08);;
+  
 }
+.list-portfolio:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+  0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 
 /* footer */
 
