--- a/css/styles.css
+++ b/css/styles.css
@@ -467,7 +467,23 @@ p {
 }
 
 .footer-media {
-    display: flex;
-    align-items: baseline;
-    margin-right: 120px;
+  display: flex;
+  flex-direction: column;
+}
+
+.social-media {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.media-list {
+  display: flex;
+  gap: 16px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
