--- a/css/styles.css
+++ b/css/styles.css
@@ -466,9 +466,12 @@ p {
     margin: 0;
 }
 
-.footer-media {
-  display: flex;
-  flex-direction: column;
+.footer-main {
+    display: flex;
+    flex-direction: column;
+}
+.footer-content {
+    margin-right: 120px;
 }
 
 .social-media {
