--- a/css/styles.css
+++ b/css/styles.css
@@ -468,7 +468,7 @@ p {
 
 .footer-main {
     display: flex;
-    flex-direction: column;
+    align-items: baseline
 }
 .footer-content {
     margin-right: 120px;
@@ -489,4 +489,30 @@ p {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+.social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: #31d0aa;
+}
+
+.social-icon {
+  fill: #f4f4fd;
+  width: 24px;
+  height: 24px;
 }
